--- a/Berlitzkids/slider-cta central.html
+++ b/Berlitzkids/slider-cta central.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.berlitz.com.mx/content/Ingredientes-de-berlitz';
+                adfClickTAGUrl = 'https://www.berlitz.com.mx';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
