--- a/Berlitzkids/slider-cta central.html
+++ b/Berlitzkids/slider-cta central.html
@@ -75,8 +75,8 @@
             width: 85px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48.5%;
-            left: -30px;
+            margin-left: 60px;
+           
             background-color: #0e0295;
             font-family: 'Lato', sans-serif;
             padding: 5px;
