--- a/Berlitzkids/slider-cta central.html
+++ b/Berlitzkids/slider-cta central.html
@@ -70,13 +70,12 @@
         }
         
            .tgx_logo {
-            position: absolute;
+            position: fixed;
             top:290px;
             width: 85px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 60px;
-           
+            margin-left: 95px;
             background-color: #0e0295;
             font-family: 'Lato', sans-serif;
             padding: 5px;
