--- a/Antojeria/Cube.html
+++ b/Antojeria/Cube.html
@@ -504,13 +504,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 41px;
-        -ms-transform: translate(-50%, -50%) translate(5px, 75px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(5px, 75px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(5px, 75px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(5px, 75px) rotate(0deg);
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 24px;
+        -ms-transform: translate(-50%, -50%) translate(1px, 75px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 75px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 75px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 75px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -591,13 +591,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 19px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 41px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 24px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -905,8 +905,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">La magia de sentirse 
-en vacaciones</div>
+<div id="i14">La magia de sentirse en vacaciones</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/lh4qvOW.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -928,8 +927,7 @@ en vacaciones</div>
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Te haremos sentir 
-de vacaciones</div>
+<div id="i24">Te haremos sentir de vacaciones</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/Vl8fV9l.png"/>
 <!--#/#--><!--#i5.i231.button.html:button/html-->
@@ -1132,11 +1130,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i191.image.js:image/base/js*/
@@ -1201,12 +1195,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*/
+
 
   function next(){
              cube_i2.rotate(cube_i2.ROTATE_NEXT)
