--- a/Antojeria/fade.html
+++ b/Antojeria/fade.html
@@ -81,13 +81,13 @@
         }
 
         .kombucha_cover .kombucha_logo {
-            position: absolute;
-            bottom: -15px;
+            position: fixed;
+            bottom: 350px;
             width:105px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 40%;
-            left: -30px;
+            margin-left:90px;
+           
             background-color: #105491;
             padding: 5px;
             border-radius: 20px;
