--- a/Antojeria/fade.html
+++ b/Antojeria/fade.html
@@ -81,12 +81,12 @@
         }
 
         .kombucha_cover .kombucha_logo {
-            position: fixed;
-            bottom: 350px;
+            position: absolute;
+            bottom: -15px;
             width:105px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left:90px;
+            margin-left:91px;
            
             background-color: #105491;
             padding: 5px;
