--- a/Antojeria/fade.html
+++ b/Antojeria/fade.html
@@ -82,7 +82,7 @@
 
         .kombucha_cover .kombucha_logo {
             position: fixed;
-            bottom: 47%;
+            margin-top: 373px;
             width:105px;
             line-height: 1.3em;
             z-index: 2;
