--- a/Regio/cube.html
+++ b/Regio/cube.html
@@ -632,7 +632,11 @@ if ('click' === 'click') {
     /* Name: On Click; */
     var el = document.getElementById('i4');
 
+  
 
+    if ('click' === 'click') {
+        el.style.cursor = 'pointer';
+    }
     /*#/#*//*#i5.i22.image.js:image/base/js*/
 
     /*#/#*//*#i5.i68.image.js:image/base/js*/
@@ -702,6 +706,10 @@ if ('click' === 'click') {
     var el = document.getElementById('i5');
 
 
+
+    if ('click' === 'click') {
+        el.style.cursor = 'pointer';
+    }
     /*#/#*//*#i6.i70.image.js:image/base/js*/
 
 /*#/#*//*#i6.i124.image.js:image/base/js*/
@@ -768,6 +776,10 @@ if ('click' === 'click') {
     /* Name: On Click; */
     var el = document.getElementById('i6');
 
+
+    if ('click' === 'click') {
+        el.style.cursor = 'pointer';
+    }
     /*#/#*/    
 </script>
 <!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i8.font.meta:font/meta*/
