Ajustes cubo Regio

--- a/Regio/index.html
+++ b/Regio/index.html
@@ -632,7 +632,11 @@ if ('click' === 'click') {
     /* Name: On Click; */
     var el = document.getElementById('i4');
 
-  
+    el.addEventListener('click', function(e){
+    /*#i58.i59.actions-clicktag.js:actions-clicktag/base/js.2*/
+        window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+        /*#/#*/    
+    });
 
     if ('click' === 'click') {
         el.style.cursor = 'pointer';
@@ -705,7 +709,11 @@ if ('click' === 'click') {
     /* Name: On Click; */
     var el = document.getElementById('i5');
 
-
+    el.addEventListener('click', function(e){
+    /*#i60.i61.actions-clicktag.js:actions-clicktag/base/js.2*/
+        window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+        /*#/#*/    
+    });
 
     if ('click' === 'click') {
         el.style.cursor = 'pointer';
@@ -776,6 +784,11 @@ if ('click' === 'click') {
     /* Name: On Click; */
     var el = document.getElementById('i6');
 
+    el.addEventListener('click', function(e){
+    /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
+        window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+        /*#/#*/    
+    });
 
     if ('click' === 'click') {
         el.style.cursor = 'pointer';
