--- a/Regio/Cube.html
+++ b/Regio/Cube.html
@@ -956,7 +956,7 @@ un bebe!</div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¿Te atreverías a probar una máxima limpieza?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/nTbsFdr.png"/>
+<img id="i60" src="https://i.imgur.com/Sv7qmxx.png"/>
 <!--#/#--><!--#i6.i217.image.html:image/html-->
 <img id="i217" src="https://i.imgur.com/u4H98vg.jpg"/>
 <!--#/#--><!--#i6.i221.button.html:button/html-->
@@ -1053,7 +1053,11 @@ if ('click' === 'click') {
 
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i215.image.js:image/base/js*/
@@ -1099,7 +1103,11 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i217.image.js:image/base/js*/
@@ -1145,7 +1153,11 @@ if ('click' === 'click') {
 
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*/
 
   function next(){
