--- a/Regio/slider.html
+++ b/Regio/slider.html
@@ -206,8 +206,8 @@
             <div id="te-wrapper" class="te-wrapper">
                <a href="http://papelregio.com/papel-higienico/luxury-almond-touch/" target="_blank">
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡Pruébame!</span></div>
-                <div class="te-images"> <img src="https://i.imgur.com/UchRNr2.jpg" alt="" /> <img src="https://i.imgur.com/cSVK6If.png" alt="" /> <img src="https://i.imgur.com/Uf90vTW.png" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/UchRNr2.jpg" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/6LQhfJq.jpg" alt="" /> <img src="https://i.imgur.com/cSVK6If.png" alt="" /> <img src="https://i.imgur.com/Uf90vTW.png" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/6LQhfJq.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
