--- a/Regio/Cube.html
+++ b/Regio/Cube.html
@@ -909,7 +909,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/5yGpIbW.png"/>
+<img id="i130" src="https://i.imgur.com/xaTcUNP.png"/>
 <!--#/#--><!--#i4.i181.button.html:button/html-->
 <button id="i181">¡Pruébame!</button>
 <!--#/#--><!--#i4.i193.image.html:image/html-->
@@ -956,7 +956,7 @@ un bebe!</div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¿Te atreverías a probar una máxima limpieza?</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/Sv7qmxx.png"/>
+<img id="i60" src="https://i.imgur.com/nTbsFdr.png"/>
 <!--#/#--><!--#i6.i217.image.html:image/html-->
 <img id="i217" src="https://i.imgur.com/u4H98vg.jpg"/>
 <!--#/#--><!--#i6.i221.button.html:button/html-->
