--- a/Avantel/fade.html
+++ b/Avantel/fade.html
@@ -372,7 +372,7 @@ ol > li:before {
      Las llamadas a <b>través de datos</b> están cambiando el modelo tradicional de uso del teléfono. <b>Te damos 5 razones para hacerlo: </b>
      </p> 
           
-  <ol>
+  <ol style=" text-align: justify; width: 99%; margin-left: -5px;">
   <li> Es más <b>barato</b> que las llamadas a través de voz. </li>
   <li>Se tiene <b>mejor cobertura</b> y calidad de sonido.  </li>
    <li>Puedes<b> usar cualquier aplicación</b> de llamadas.</li>
