--- a/Avantel/slider.html
+++ b/Avantel/slider.html
@@ -205,8 +205,8 @@
      <a href="http://avantel.co/" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:90%; color: white;">¡Rómpelo!</span></div>
-                <div class="te-images"> <img src="https://i.imgur.com/lXalWQe.jpg" alt="" /> <img src="https://i.imgur.com/tPwauGC.jpg" alt="" /> <img src="https://i.imgur.com/Z11dMLp.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/lXalWQe.jpg" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/zqobwIO.jpg" alt="" /> <img src="https://i.imgur.com/lOa3WCo.jpg" alt="" /> <img src="https://i.imgur.com/ShEVFzs.jpg" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/zqobwIO.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
