--- a/Tres Cielos/fijo-gif.html
+++ b/Tres Cielos/fijo-gif.html
@@ -233,7 +233,7 @@
             <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:70%; color: white;">¡Ven al cielo!</span></div>
 
                 <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/8miFvkw.gif" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/1xYXjMA.gif" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
