--- a/Tres Cielos/fijo extendido.html
+++ b/Tres Cielos/fijo extendido.html
@@ -289,7 +289,7 @@
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
-    No dejes pasar la oportunidad de casarte en el mejor jardín de Tequesquitengo. Últimas fechas disponibles de febrero a mayo. Al contratar, recibe gratis un book fotográfico prenupcial.
+    No dejes pasar la oportunidad de casarte en el mejor jardín de Tequesquitengo. Últimas fechas disponibles de febrero a mayo. Al contratar, <strong> recibe gratis </strong> un book fotográfico prenupcial.
 
 
                 </p> 
