--- a/Formatos ADS/300 X 250/fijo-gif.html
+++ b/Formatos ADS/300 X 250/fijo-gif.html
@@ -209,7 +209,19 @@
             }
         }
 
-
+        .cta {
+            position: absolute;
+            top: 140px;
+            width: 80px;
+            line-height: 1.3em;
+            z-index: 5;
+            margin-left: 48%;
+            left: -30px;
+            background-color: #b5adaa;
+            padding: 5px;
+            border-radius: 20px;
+            text-align: center;
+            }
     </style>
 </head>
 
@@ -218,7 +230,7 @@
         <a href="http://www.trescielos.mx/jardin-de-eventos/" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
 
-            
+            <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:70%; color: white;">¡Ven al cielo!</span></div>
 
                 <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/1xYXjMA.gif" alt="" /> </div>
@@ -226,9 +238,9 @@
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
-                <div style="margin-top:-5px; margin-left: 10px; margin-right: 10px;">
+                <div style="margin-top:25px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:20px;">
+                        <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:16px;">
 						    ¡Aparta tu boda y recibe gratis una sesión fotográfica!
 						</span>
                        
