--- a/Avent/slider-extendido.html
+++ b/Avent/slider-extendido.html
@@ -247,7 +247,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: 9px;
+            margin-top: 2px;
             margin-right: -8px;
         }
     </style>
@@ -278,10 +278,10 @@
                 </div>
                 <div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
                     <div class="bzm_text">
-                         <!--<span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:18px; text-align: center; margin-left:-9px; margin-right:10px;">
-						Descubre los beneficios de las plantas de las que se obtienen los activos de Mustela.
-						</span> <br>-->
-                        <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:13px; width:95%; text-align:justify;">
+                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:18px; text-align: center; margin-left:-9px; margin-right:10px;">
+						Leche materna, la protección natural para tu bebé
+						</span> <br>
+                        <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:12px; width:95%; text-align:justify;">
                         <p style="margin-top: 10px; line-height: 1.2em; margin-left: 3px; ">
                             <strong> La lactancia materna  </strong> es la forma ideal de aportar a los niños pequeños los nutrientes que necesitan para un crecimiento y desarrollo saludables.
                             <br> Prácticamente todas las mujeres pueden amamantar, siempre que dispongan de buena información y del apoyo de su familia y del sistema de atención de salud.<br>
@@ -295,7 +295,7 @@
             
 						</span>
                         <div class="logo">
-                            <img src="https://i.imgur.com/grmGYGf.png" style="height:30px; margin-top:-28px;">
+                            <img src="https://i.imgur.com/grmGYGf.png" style="height:25px; margin-top:-35px;">
 
                         </div>
                     </div>
