--- a/Avent/slider-extendido.html
+++ b/Avent/slider-extendido.html
@@ -278,8 +278,8 @@
                 </div>
                 <div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
                     <div class="bzm_text">
-                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:18px; text-align: center; margin-left:-9px; margin-right:10px;">
-						Leche materna, la protección natural para tu bebé
+                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:16px; text-align: center; margin-left:-9px; margin-right:10px;">
+						Guiando juntos a las madres durante el camino de la Lactancia
 						</span> <br>
                         <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:12px; width:95%; text-align:justify;">
                         <p style="margin-top: 10px; line-height: 1.2em; margin-left: 3px; ">
