--- a/Avent/slider-extendido.html
+++ b/Avent/slider-extendido.html
@@ -285,7 +285,7 @@
                         <p style="margin-top: 10px; line-height: 1.2em; margin-left: 3px; ">
                             <strong> La lactancia materna  </strong> es la forma ideal de aportar a los niños pequeños los nutrientes que necesitan para un crecimiento y desarrollo saludables.
                             <br> Prácticamente todas las mujeres pueden amamantar, siempre que dispongan de buena información y del apoyo de su familia y del sistema de atención de salud.<br>
-                            La OMS recomienda la lactancia materna exclusiva durante seis meses, la introducción de alimentos apropiados para la edad y seguros a partir de entonces, y el mantenimiento de la lactancia materna hasta los 2 años o más.
+                            <strong> La OMS recomienda </strong> la lactancia materna exclusiva durante seis meses, la introducción de alimentos apropiados para la edad y seguros a partir de entonces, y el mantenimiento de la lactancia materna hasta los 2 años o más.
                             <br>
                              Leche materna, <strong>la protección natural para tu bebé. </strong>  </p>
                            
