--- a/Avent/slider-extendido.html
+++ b/Avent/slider-extendido.html
@@ -75,8 +75,7 @@
             width: 85px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48.5%;
-            left: -25px;
+            margin-left: 100px;
             background-color: #006496;
             font-family: 'Lato', sans-serif;
             padding: 5px;
