--- a/Avent/slider-extendido.html
+++ b/Avent/slider-extendido.html
@@ -246,7 +246,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: 2px;
+            margin-top: -12px;
             margin-right: -8px;
         }
     </style>
@@ -277,16 +277,16 @@
                 </div>
                 <div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
                     <div class="bzm_text">
-                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:16px; text-align: center; margin-left:-9px; margin-right:10px;">
-						Guiando juntos a las madres durante el camino de la Lactancia
+                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:18px; text-align: center; margin-left:-9px; margin-right:10px;">
+						Leche materna, la protección natural para tu bebé.
 						</span> <br>
-                        <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:12px; width:95%; text-align:justify;">
+                        <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:12.5px; width:95%; text-align:justify;">
                         <p style="margin-top: 10px; line-height: 1.2em; margin-left: 3px; ">
                             <strong> La lactancia materna  </strong> es la forma ideal de aportar a los niños pequeños los nutrientes que necesitan para un crecimiento y desarrollo saludables.
                             <br> Prácticamente todas las mujeres pueden amamantar, siempre que dispongan de buena información y del apoyo de su familia y del sistema de atención de salud.<br>
                             <strong> La OMS recomienda </strong> la lactancia materna exclusiva durante seis meses, la introducción de alimentos apropiados para la edad y seguros a partir de entonces, y el mantenimiento de la lactancia materna hasta los 2 años o más.
                             <br>
-                             Leche materna, <strong>la protección natural para tu bebé. </strong>  </p>
+                               </p>
                            
  
                     
