--- a/Avent/slider-extendido.html
+++ b/Avent/slider-extendido.html
@@ -282,9 +282,20 @@
 						</span> <br>
                         <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:12.5px; width:95%; text-align:justify;">
                         <p style="margin-top: 10px; line-height: 1.2em; margin-left: 3px; ">
-                            <strong> La lactancia materna  </strong> es la forma ideal de aportar a los niños pequeños los nutrientes que necesitan para un crecimiento y desarrollo saludables.
-                            <br> Prácticamente todas las mujeres pueden amamantar, siempre que dispongan de buena información y del apoyo de su familia y del sistema de atención de salud.<br>
-                            <strong> La OMS recomienda </strong> la lactancia materna exclusiva durante seis meses, la introducción de alimentos apropiados para la edad y seguros a partir de entonces, y el mantenimiento de la lactancia materna hasta los 2 años o más.
+                            <strong> La lactancia materna  </strong> juega un papel vital para las bases
+del comienzo saludable del niño. Puede proteger al
+bebé de infecciones y de enfermedades crónicas. <br>
+                            
+                            <strong> La OMS recomienda </strong> comenzar a amamantar dentro de
+la primera hora de vida y continuar exclusivamente
+durante 6 meses para garantizar el crecimiento, el
+desarrollo y la salud óptima de los bebés.
+Muchas mujeres sufren problemas comunes de lactancia,
+como mastitis, dolor en los pezones o pezones invertidos.
+Para ayudar a establecer la lactancia materna, las mujeres
+reciben apoyo de profesionales que comprenden los aspectos prácticos
+que enfrentan muchas de ellas y trabajan con las familias para adaptar los métodos
+ de alimentación a sus necesidades.
                             <br>
                                </p>
                            
