--- a/Avent/slider.html
+++ b/Avent/slider.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg';
+                adfClickTAGUrl = 'https://www.philips.com.mx/c-m-mo/extractores-y-cuidado-de-las-mamas?origin=1_mx_es_cnt-avent-meslactancia_display___mosaic_intereses_native';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
